--- a/src/alt/css/post-5.css
+++ b/src/alt/css/post-5.css
@@ -1,129 +1,33 @@
-.elementor-kit-5 {
-    --e-global-color-primary: #003768;
-    --e-global-color-secondary: #63788B;
-    --e-global-color-text: #63788B;
-    --e-global-color-accent: #003768;
-    --e-global-typography-primary-font-family: "isabal bold";
-    --e-global-typography-primary-font-weight: bold;
-    --e-global-typography-secondary-font-family: "Roboto Slab";
-    --e-global-typography-secondary-font-weight: 400;
-    --e-global-typography-text-font-family: "#627689 pro Light";
-    --e-global-typography-text-font-size: 16px;
-    --e-global-typography-text-font-weight: 400;
-    --e-global-typography-text-line-height: 26px;
-    --e-global-typography-accent-font-family: "Roboto";
-    --e-global-typography-accent-font-weight: 500;
-    --e-global-typography-18fa8ad-font-family: "isabal bold";
-    --e-global-typography-18fa8ad-font-size: 56px;
-    --e-global-typography-18fa8ad-line-height: 53px;
-    --e-global-typography-5604343-font-family: "brown pro Light";
-    --e-global-typography-5604343-font-size: 20px;
-    --e-global-typography-5604343-font-weight: 500;
-    --e-global-typography-5604343-line-height: 30px;
-    color: var( --e-global-color-text );
-    font-family: "brown pro Light", Sans-serif;
-    font-size: 17px;
-    font-weight: 200;
-    line-height: 1.2em;
+.elementor-kit-5{--e-global-color-primary:#003768;--e-global-color-secondary:#63788B;--e-global-color-text:#63788B;--e-global-color-accent:#003768;--e-global-color-37e1c5b:#003768;--e-global-typography-primary-font-family:"isabal bold";--e-global-typography-primary-font-weight:bold;--e-global-typography-secondary-font-family:"Roboto Slab";--e-global-typography-secondary-font-weight:400;--e-global-typography-text-font-family:"brown pro Light";--e-global-typography-text-font-size:16px;--e-global-typography-text-font-weight:400;--e-global-typography-text-line-height:26px;--e-global-typography-accent-font-family:"Roboto";--e-global-typography-accent-font-weight:500;--e-global-typography-18fa8ad-font-family:"isabal bold";--e-global-typography-18fa8ad-font-size:56px;--e-global-typography-18fa8ad-line-height:60px;--e-global-typography-5604343-font-family:"brown pro Light";--e-global-typography-5604343-font-size:22px;--e-global-typography-5604343-font-weight:600;--e-global-typography-5604343-line-height:30px;--e-global-typography-b017256-font-family:"brown pro Light";--e-global-typography-b017256-font-size:18px;--e-global-typography-b017256-font-weight:400;--e-global-typography-b017256-line-height:26px;--e-global-typography-6df517f-font-family:"brown pro Light";--e-global-typography-6df517f-font-size:22px;--e-global-typography-6df517f-font-weight:500;--e-global-typography-6df517f-line-height:30px;--e-global-typography-ecbe118-font-family:"Brownpro semibold";--e-global-typography-ecbe118-font-size:20px;--e-global-typography-ecbe118-font-weight:400;--e-global-typography-ecbe118-line-height:26px;color:var( --e-global-color-text );font-family:"brown pro Light", Sans-serif;font-size:17px;font-weight:200;line-height:1.2em;}.elementor-kit-5 h1{color:#63788B;font-family:"isabal bold", Sans-serif;font-size:40px;}.elementor-kit-5 button,.elementor-kit-5 input[type="button"],.elementor-kit-5 input[type="submit"],.elementor-kit-5 .elementor-button{font-family:"Brownpro semibold", Sans-serif;font-size:15px;text-decoration:none;line-height:17px;padding:14px 25px 14px 25px;}.elementor-section.elementor-section-boxed > .elementor-container{max-width:1280px;}.e-con{--container-max-width:1280px;}.elementor-widget:not(:last-child){margin-bottom:20px;}.elementor-element{--widgets-spacing:20px;}{}h1.entry-title{display:var(--page-title-display);}.elementor-kit-5 e-page-transition{background-color:#FFBC7D;}@media(max-width:1024px){.elementor-kit-5{--e-global-typography-6df517f-font-size:13px;--e-global-typography-6df517f-line-height:25px;--e-global-typography-ecbe118-font-size:18px;}.elementor-section.elementor-section-boxed > .elementor-container{max-width:1024px;}.e-con{--container-max-width:1024px;}}@media(max-width:767px){.elementor-kit-5{--e-global-typography-text-font-size:14px;--e-global-typography-18fa8ad-font-size:37px;--e-global-typography-18fa8ad-line-height:37px;--e-global-typography-5604343-font-size:18px;--e-global-typography-b017256-font-size:16px;--e-global-typography-6df517f-font-size:16px;--e-global-typography-ecbe118-font-size:16px;}.elementor-section.elementor-section-boxed > .elementor-container{max-width:767px;}.e-con{--container-max-width:767px;}}/* Start Custom Fonts CSS */@font-face {
+	font-family: 'isabal bold';
+	font-style: normal;
+	font-weight: bold;
+	font-display: auto;
+	src: url('../fonts/Isabel-Bold.eot');
+	src: url('../fonts/Isabel-Bold.eot#iefix') format('embedded-opentype'),
+		url('../fonts/Isabel-Bold.woff2') format('woff2'),
+		url('../fonts/Isabel-Bold.woff') format('woff'),
+		url('../fonts/Isabel-Bold.ttf') format('truetype');
 }
-
-.elementor-kit-5 h1 {
-    color: #63788B;
-    font-family: "isabal bold", Sans-serif;
-    font-size: 40px;
-}
-
-.elementor-kit-5 button,.elementor-kit-5 input[type="button"],.elementor-kit-5 input[type="submit"],.elementor-kit-5 .elementor-button {
-    font-family: "Brownpro semibold", Sans-serif;
-    font-size: 15px;
-    text-decoration: none;
-    line-height: 17px;
-    padding: 14px 25px 14px 25px;
-}
-
-.elementor-section.elementor-section-boxed > .elementor-container {
-    max-width: 1280px;
-}
-
-.e-container {
-    --container-max-width: 1280px;
-}
-
-.elementor-widget:not(:last-child) {
-    margin-bottom: 20px;
-}
-
-.elementor-element {
-    --widgets-spacing: 20px;
-}
-
-{
-}
-
-h1.entry-title {
-    display: var(--page-title-display);
-}
-
-.elementor-kit-5 e-page-transition {
-    background-color: #FFBC7D;
-}
-
-@media(max-width: 1024px) {
-    .elementor-section.elementor-section-boxed > .elementor-container {
-        max-width:1024px;
-    }
-
-    .e-container {
-        --container-max-width: 1024px;
-    }
-}
-
-@media(max-width: 767px) {
-    .elementor-kit-5 {
-        --e-global-typography-text-font-size:14px;
-        --e-global-typography-18fa8ad-font-size: 37px;
-        --e-global-typography-18fa8ad-line-height: 37px;
-        --e-global-typography-5604343-font-size: 18px;
-    }
-
-    .elementor-section.elementor-section-boxed > .elementor-container {
-        max-width: 767px;
-    }
-
-    .e-container {
-        --container-max-width: 767px;
-    }
-}
-
-/* Start Custom Fonts CSS */
-@font-face {
-    font-family: 'isabal bold';
-    font-style: normal;
-    font-weight: bold;
-    font-display: auto;
-    src: url('../fonts/Isabel-Bold.eot');
-    src: url('../fonts/Isabel-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Isabel-Bold.woff2') format('woff2'), url('../fonts/Isabel-Bold.woff') format('woff'), url('../fonts/Isabel-Bold.ttf') format('truetype');
-}
-
 /* End Custom Fonts CSS */
-/* Start Custom Fonts CSS */
-@font-face {
-    font-family: 'brown pro Light';
-    font-style: normal;
-    font-weight: 200;
-    font-display: auto;
-    src: url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.eot');
-    src: url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.eot?#iefix') format('embedded-opentype'), url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.woff2') format('woff2'), url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.woff') format('woff'), url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.ttf') format('truetype'), url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.svg#brownproLight') format('svg');
+/* Start Custom Fonts CSS */@font-face {
+	font-family: 'brown pro Light';
+	font-style: normal;
+	font-weight: 200;
+	font-display: auto;
+	src: url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.eot');
+	src: url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.eot#iefix') format('embedded-opentype'),
+		url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.woff2') format('woff2'),
+		url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.woff') format('woff'),
+		url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.ttf') format('truetype'),
+		url('../fonts/7fcd062b59991f791bd6067a6de0f6ac.svg#brownproLight') format('svg');
 }
-
 /* End Custom Fonts CSS */
-/* Start Custom Fonts CSS */
-@font-face {
-    font-family: 'Brownpro semibold';
-    font-style: normal;
-    font-weight: normal;
-    font-display: auto;
-    src: url('../fonts/Brown-Pro-Semi-Bold.ttf') format('truetype');
+/* Start Custom Fonts CSS */@font-face {
+	font-family: 'Brownpro semibold';
+	font-style: normal;
+	font-weight: normal;
+	font-display: auto;
+	src: url('../fonts/Brown-Pro-Semi-Bold.ttf') format('truetype');
 }
-
 /* End Custom Fonts CSS */
